adding js and jquery

--- a/albums/templates/albums/base.html
+++ b/albums/templates/albums/base.html
@@ -64,7 +64,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-danger">
           <a class="navbar-brand" href="#"
-            ><h3><strong>Test Picture</strong></h3></a
+            ><h3><strong>Picture World</strong></h3></a
           >
           <button
             class="navbar-toggler"
