--- a/albums/static/css/styles.css
+++ b/albums/static/css/styles.css
@@ -31,3 +31,17 @@ input.form-control{
     min-height: 400px;
     background-blend-mode: difference;
 }
+
+.cover{
+    min-height: 450px;
+    width: inherit;
+    background: rgba(0,0,0,0.5)
+}
+
+div.container.top{
+    padding-top: 80px;
+}
+small{
+    margin-top: 40px;
+    color: #c3c3c3;
+}
