--- a/albums/templates/albums/base.html
+++ b/albums/templates/albums/base.html
@@ -110,7 +110,7 @@
               </div>
 
               <small class="text-center my-5"
-                >Trending searches: Memes, Music</small
+                >Trending: Sports, Music</small
               >
             </form>
             <p class="lead text-center mt-5">
