restructuring the navbar

--- a/albums/templates/albums/index.html
+++ b/albums/templates/albums/index.html
@@ -49,7 +49,7 @@
                     >{{image.category}}</span
                   >
                   <a
-                    href="/location/{{image.}}"
+                    href="/location/{{image.location}}"
                     class="btn btn-sm btn-outline-info"
                     >{{image.location}}</a
                   >
