--- a/albums/templates/albums/base.html
+++ b/albums/templates/albums/base.html
@@ -63,33 +63,26 @@
     <div class="overlay">
       <div class="banner text-light">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light text-danger">
-          <a class="navbar-brand" href="#"
-            ><h3><strong>Picture World</strong></h3></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02 ">
-            <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-              <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="#b">CATEGORIES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#locations">LOCATION</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <header class="site-header">
+          <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <div class="container">
+              <a class="navbar-brand mr-4" href="/">Test Picture</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarToggle">
+                <div class="navbar-nav mr-auto">
+                  <a class="nav-item nav-link" href="{% url 'index'%}">HOME</a>
+                </div>
+                <!-- Navbar Right Side -->
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="#locations">LOCATION</a>
+                    <a class="nav-item nav-link" href="#b">CATEGORIES</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </header> 
         <!-- end navbar -->
         <!-- landing page -->
         <div class="cover p-5">
