adding date posted to images

--- a/albums/templates/albums/index.html
+++ b/albums/templates/albums/index.html
@@ -29,6 +29,7 @@
               <div class="modal-content modalcard">
                 <div class="modal-header">
                   <h5 class="modal-title" id="imageheader">{{image.name}}</h5>
+                  <small class="text-muted"> <span class="text-dark">Date Posted</span> {{image.date}}</small>
                   <button
                     type="button"
                     class="close"
