handling no results found page

--- a/albums/templates/albums/location.html
+++ b/albums/templates/albums/location.html
@@ -6,7 +6,7 @@
     <hr>
 
     {% if location_images %}
-    <div class="card-columns">
+    <div class="card-columns gallery">
 
         {% for image in location_images %}
 
@@ -19,7 +19,7 @@
                 <div class="modal-content modalcard">
                     <div class="modal-header">
                         <h5 class="modal-title d-block mx-auto" id="exampleModalLongTitle">{{image.name}}</h5>
-                        
+                        <small class="text-muted"> <span class="text-dark">Date Posted: </span> {{image.date}}</small>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -27,7 +27,7 @@
                     <div class="modal-body">
                         <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid">
                         <p>{{image.description}}</p>
-                        <p class="lead">{{image.date}}</p>
+                        
                         <span class="btn btn-sm btn-outline-success">{{image.category | title}}</span> <a href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
                     </div>
                     <div class="modal-footer">
