removing unnecessary add ons

--- a/albums/templates/albums/search_results.html
+++ b/albums/templates/albums/search_results.html
@@ -9,7 +9,7 @@
     <h2 class="text-center" id="foundnon"> Found no matching images for your search {{message}}</h2>
 
     <a class="d-block mx-auto" href="/">
-        <button class="btn btn-sm btn-info d-block mx-auto">Back Home</button>
+        <button class="btn btn-sm btn-outline-primary d-block mx-auto">Abort</button>
     </a>
     {% endif %}
 </div>
