--- a/albums/static/css/styles.css
+++ b/albums/static/css/styles.css
@@ -136,3 +136,7 @@ h2 {
         padding:4px;
         border-radius:6px;
         }
+        #locations{
+            color:white;
+            font-family: 'Special Elite', cursive;
+        }
