--- a/albums/templates/albums/index.html
+++ b/albums/templates/albums/index.html
@@ -1,7 +1,7 @@
 {% extends 'albums/base.html' %} 
 {% block content %}
 
-<h3 class="text-center my-2">Gallery</h3>
+<h3 class="text-center text-dark my-2">Gallery</h3>
 <div class="container-fluid gallery mt-4" id="b">
   <div class="container ">
       <div class="row">
@@ -11,7 +11,7 @@
         <div class="card-columns">
           {% for image in images %}
           <div class="card" data-toggle="modal" data-target="#{{image.id}}">
-            <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img img-responsive" width="100" height="300" />
+            <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img img-responsive" width="50" height="200" />
           </div>
     
           <div
@@ -40,21 +40,11 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <img
-                    src="{{image.image.url}}"
-                    alt="{{image.name}}"
-                    class="img-fluid"
-                  />
-                  <p class="imgdesc ">{{image.description}}</p>
-                  <span class="btn btn-sm btn-outline-success"
-                    >{{image.category}}</span
-                  >
-                  <a
-                    href="/location/{{image.location}}"
-                    class="btn btn-sm btn-outline-info"
-                    >{{image.location}}</a
-                  >
-                </div>
+                  <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid">
+                  <p class="imgdesc text-center">{{image.description}}</p>
+                  <span class="btn btn-sm btn-outline-success">{{image.category}}</span> <a
+                      href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
+              </div>
                 <div class="modal-footer">
                   <input
                     class="form-control input-lg"
@@ -83,6 +73,8 @@
         </div>
         </div>
         <div class="col-md-1 my-5">
+          <h3 class="text-danger">Locations</h3>
+          <hr>
           <div class="">
             <span id="locations">
               {% for location in locations %}
