--- a/albums/templates/albums/location.html
+++ b/albums/templates/albums/location.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h2> Gallery</h2>
+    <h3 class="text-center text-light my-2">Gallery</h3>
     <hr>
 
     {% if location_images %}
@@ -11,7 +11,7 @@
         {% for image in location_images %}
 
         <div class="card" data-toggle="modal" data-target="#{{image.id}}">
-            <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img">
+            <img src="{{image.image.url}}" alt="{{image.name}}" width="50" height="200" class="card-img">
         </div>
         <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -19,7 +19,7 @@
                 <div class="modal-content modalcard">
                     <div class="modal-header">
                         <h5 class="modal-title d-block mx-auto" id="exampleModalLongTitle">{{image.name}}</h5>
-                        <small class="text-muted"> <span class="text-dark">Date Posted: </span> {{image.date}}</small>
+                        <small class="text-muted"><span class="text-warning">Posted</span>{{image.date}}</small>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -27,13 +27,12 @@
                     <div class="modal-body">
                         <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid">
                         <p>{{image.description}}</p>
-                        
                         <span class="btn btn-sm btn-outline-success">{{image.category | title}}</span> <a href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
                     </div>
                     <div class="modal-footer">
                         <input class="form-control input-lg" type="text"
                                value="{{image.image.url}}" id="{{image.id}}.url">
-                        <button class="btn btn-success btn-sm" onclick="copyLink('{{image.id}}.url')">Copy Link</button>
+                        <button class="btn btn-success btn-sm" onclick="copyLink('{{image.id}}.url')">Copy</button>
                         <button type="button" class="btn btn-outline-danger btn-sm" data-dismiss="modal">Close
                         </button>
                     </div>
